# mcp-sct

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  mcpize.yaml
.mcpize/: project.json
cmd/mcp-sct/: main.go
configs/: claude_desktop_config.json
deployments/docker/: Dockerfile  docker-compose.yml  stack-mcp-sct.yml
deployments/k8s/: deployment.yaml
internal/auth/: auth.go  plans.go
internal/bridge/: client.go  manager.go
internal/config/: config.go
internal/integrations/: bandit.go  gosec.go  integration.go  npm_audit.go  semgrep.go
internal/report/: generator.go
internal/rules/: loader.go  matcher.go  registry.go  rule.go
internal/rules/builtin/: embed.go
internal/rules/builtin/rules/go/: command_injection.yml  error_info_leak.yml  insecure_tls.yml  path_traversal.yml  sqli.yml
internal/scanner/: engine.go  engine_test.go  language.go  result.go  taint.go  taint_test.go
internal/server/: guidelines.go  middleware.go  server.go  transport.go
internal/storage/: postgres.go  sqlite.go  storage.go
internal/tools/: check_deps.go  generate_report.go  scan_code.go  sectest.go  suggest_fixes.go
internal/types/: finding.go
migrations/: 001_initial.sql  002_audit_log.sql
python/: pyproject.toml
python/src/mcp_sct_ai/: __init__.py  server.py
python/src/mcp_sct_ai/models/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  registry.py
scripts/: entrypoint.sh  start-ai-bridge.sh
testdata/: taint_vulnerable.py  vulnerable.js  vulnerable.py
(+23 files in other folders)
