[project]
name = "mcp-sct-ai"
version = "0.2.0"
description = "AI Bridge for MCP-SCT security analysis"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
ollama = ["ollama>=0.4"]
all = ["openai>=1.0", "anthropic>=0.40", "ollama>=0.4"]

[project.scripts]
mcp-sct-ai = "mcp_sct_ai.server:main"
